--- a/app/eventyay/orga/templates/orga/review/assignment.html
+++ b/app/eventyay/orga/templates/orga/review/assignment.html
@@ -27,11 +27,11 @@
         </p>
         <div class="alert alert-info">
             {% blocktranslate trimmed %}
-                As teams can belong to multiple events, teams are managed in your organiser settings.
+                As teams can belong to multiple events, teams are managed in your organizer settings.
             {% endblocktranslate %}
         </div>
         <div class="d-flex justify-content-end mb-2">
-            <a href="{{ request.event.organiser.orga_urls.new_team }}" class="btn btn-info">
+            <a href="{{ request.event.organizer.orga_urls.new_team }}" class="btn btn-info">
                 <i class="fa fa-plus"></i> {% translate "New team" %}
             </a>
         </div>
