--- a/app/eventyay/orga/templates/orga/organizer/detail.html
+++ b/app/eventyay/orga/templates/orga/organizer/detail.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block extra_title %}{% translate "Organiser" %} :: {{ request.organiser.name }} :: {% endblock extra_title %}
+{% block extra_title %}{% translate "Organizer" %} :: {{ request.organizer.name }} :: {% endblock extra_title %}
 
 {% block content %}
     <h2>{% translate "Settings" %}</h2>
@@ -14,8 +14,8 @@
         <div class="submit-group panel">
             <span>
                 {% if request.user.is_administrator %}
-                    <a class="btn-outline-danger btn-lg" role="button" href="{{ request.organiser.orga_urls.delete }}">
-                        {% translate "Delete organiser" %}
+                    <a class="btn-outline-danger btn-lg" role="button" href="{{ request.organizer.orga_urls.delete }}">
+                        {% translate "Delete organizer" %}
                     </a>
                 {% endif %}
             </span>
