--- a/app/eventyay/static/orga/css/flow.css
+++ b/app/eventyay/static/orga/css/flow.css
@@ -4,6 +4,7 @@
   position: relative;
   user-select: none;
   margin-right: 270px;
+  width: 100%;
 
   #steps {
     display: flex;
@@ -103,7 +104,7 @@
   margin-bottom: 0;
   bottom: 1px;
   left: 250px;
-  right: 0;
+  right: 250px;
   box-shadow: var(--shadow-dialog);
   button {
     margin-left: auto;
