--- a/app/eventyay/control/templates/pretixcontrol/order/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/order/index.html
@@ -377,7 +377,7 @@
                                                 {% trans "Ticket page" %}
                                             </a>
                                         {% endif %}
-                                        {% eventsignal event "pretix.control.signals.order_position_buttons" order=order position=line request=request %}
+                                        {% eventsignal event "eventyay.control.signals.order_position_buttons" order=order position=line request=request %}
                                     </div>
                                 {% endif %}
                                 {% if line.issued_gift_cards %}
@@ -596,7 +596,7 @@
                     {% endif %}
                 </div>
             </div>
-            {% eventsignal event "pretix.control.signals.order_info" order=order request=request %}
+            {% eventsignal event "eventyay.control.signals.order_info" order=order request=request %}
             <div class="row payments">
                 <div class="col-md-12">
                     <div class="panel panel-default items">
