add name property in user and substitue pretalx with eventyay in mail system

--- a/app/eventyay/orga/templates/orga/admin/admin.html
+++ b/app/eventyay/orga/templates/orga/admin/admin.html
@@ -152,10 +152,10 @@
     <h2 class="mt-4">{% translate "Links" %}</h2>
     <ul>
         <li>
-            <a target="_blank" rel="noopener" href="https://pretalx.com">{% translate "pretalx website" %}</a>
+            <a target="_blank" rel="noopener" href="https://eventyay.com">{% translate "eventyay website" %}</a>
         </li>
         <li>
-            <a target="_blank" rel="noopener" href="https://docs.pretalx.org">{% translate "pretalx documentation" %}</a>
+            <a target="_blank" rel="noopener" href="https://docs.eventyay.org">{% translate "eventyay documentation" %}</a>
             <ul>
                 <li><a target="_blank" rel="noopener" href="https://docs.pretalx.org/en/latest/administrator/configure.html">{% translate "Configuration reference" %}</a></li>
                 <li><a target="_blank" rel="noopener" href="https://docs.pretalx.org/en/latest/administrator/installation.html">{% translate "Installation guide" %}</a></li>
