substitue app_lable to resolve talk permissions

--- a/app/eventyay/agenda/templates/agenda/base.html
+++ b/app/eventyay/agenda/templates/agenda/base.html
@@ -14,7 +14,7 @@
 {% endblock custom_header %}
 
 {% block nav_link %}
-    {% has_perm "schedule.list_schedule" request.user request.event as can_view_schedule %}
+    {% has_perm "base.list_schedule" request.user request.event as can_view_schedule %}
     {% if can_view_schedule %}
         {{ request.event.urls.schedule }}
     {% else %}
