--- a/app/eventyay/common/templates/common/base.html
+++ b/app/eventyay/common/templates/common/base.html
@@ -106,7 +106,7 @@
                         {% block header_right %}{% endblock header_right %}
                         {% if request.event and request.user.is_authenticated and not is_html_export %}
                             <details id="user-dropdown-label" class="dropdown" aria-haspopup="menu" role="menu">
-                                {% has_perm "event.orga_access_event" request.user request.event as can_see_orga_area %}
+                                {% has_perm "base.orga_access_event" request.user request.event as can_see_orga_area %}
                                 <summary>
                                     {{ request.user.get_display_name }} <i class="fa fa-caret-down ml-1"></i>
                                 </summary>
