--- a/app/eventyay/orga/templates/orga/speaker/list.html
+++ b/app/eventyay/orga/templates/orga/speaker/list.html
@@ -33,7 +33,7 @@
         </p>
     {% endif %}
 
-    {% has_perm "person.mark_arrived_speakerprofile" request.user request.event as can_mark_speaker %}
+    {% has_perm "base.mark_arrived_speakerprofile" request.user request.event as can_mark_speaker %}
     <div class="table-responsive-md">
         <table class="table table-sm table-flip table-sticky">
             <thead>
