--- a/app/eventyay/orga/templates/orga/submission/comments.html
+++ b/app/eventyay/orga/templates/orga/submission/comments.html
@@ -13,7 +13,7 @@
 {% endblock scripts %}
 
 {% block submission_content %}
-    {% has_perm 'submission.add_submissioncomment' request.user submission as can_add_comment %}
+    {% has_perm 'base.add_submissioncomment' request.user submission as can_add_comment %}
 
     <div class="comments-list">
         {% if not comments %}
@@ -31,7 +31,7 @@
                     <div class="text-muted ml-auto">
                         {{ comment.created|date:"SHORT_DATETIME_FORMAT" }}
                     </div>
-                    {% has_perm 'submission.delete_submissioncomment' request.user comment as can_delete_comment %}
+                    {% has_perm 'base.delete_submissioncomment' request.user comment as can_delete_comment %}
                     {% if can_delete_comment %}
                         <a href="{{ comment.urls.delete }}" class="btn btn-sm btn-danger ml-2">
                             <i class="fa fa-trash" title="{{ phrases.base.delete_button }}"></i>
