--- a/app/eventyay/cfp/templates/cfp/event/user_submission_edit.html
+++ b/app/eventyay/cfp/templates/cfp/event/user_submission_edit.html
@@ -20,7 +20,7 @@
 {% endblock cfp_header %}
 
 {% block content %}
-    {% has_perm "submission.add_speaker_submission" request.user submission as can_invite_speakers %}
+    {% has_perm "base.add_speaker_submission" request.user submission as can_invite_speakers %}
 
     {% include "cfp/includes/user_submission_header.html" %}
 
