--- a/app/eventyay/orga/templates/orga/submission/review.html
+++ b/app/eventyay/orga/templates/orga/submission/review.html
@@ -16,9 +16,9 @@
 {% endblock scripts %}
 
 {% block submission_content %}
-    {% has_perm "submission.view_all_reviews_submission" request.user submission as can_view_other_reviews %}
-    {% has_perm "submission.list_reviewers_review" request.user submission as can_view_reviewer_names %}
-    {% has_perm "person.reviewer_list_speakerprofile" request.user submission as no_anonymisation %}
+    {% has_perm "base.view_all_reviews_submission" request.user submission as can_view_other_reviews %}
+    {% has_perm "base.list_reviewers_review" request.user submission as can_view_reviewer_names %}
+    {% has_perm "base.reviewer_list_speakerprofile" request.user submission as no_anonymisation %}
     {% if request.user in submission.speakers.all %}
         <div class="alert alert-error">
             <span>
