--- a/app/eventyay/presale/templates/pretixpresale/index.html
+++ b/app/eventyay/presale/templates/pretixpresale/index.html
@@ -7,7 +7,7 @@
         <h3>{% trans "Hello!" %}</h3>
         <p>
             {% blocktrans trimmed with a_attr="href='https://eventyay.com'" %}
-                This is an installation of <a {{ a_attr }}>Eventyay</a> - the open source event management platform.
+                This is an installation of <a {{ a_attr }}>eventyay</a> - the open source event management platform.
             {% endblocktrans %}
         </p>
         <p>
