--- a/app/eventyay/orga/templates/orga/event_list.html
+++ b/app/eventyay/orga/templates/orga/event_list.html
@@ -27,7 +27,7 @@
                     {% include "orga/includes/dashboard_block_event.html" %}
                 {% endfor %}
                 {% if can_create_event %}
-                    <a class="dashboard-block symbol" href="{% url "orga:event.create" %}">
+                    <a class="dashboard-block symbol" href="{% url "eventyay_common:events.add" %}">
                         <i class="fa fa-plus-circle" title="{% translate "Create a new event" %}"></i>
                     </a>
                 {% endif %}
